Pull up following revision(s) (requested by joerg in ticket #1344): 	sys/sys/null.h: revision 1.8 Enclose (void *)0 in an extra set of parenthese to make the result usable in arbitrary expressions. Fixes PR/41890, I can't think of any downsides!